# fivechess

./: CMakeLists.txt  FiveChess.pro  FiveChess.pro.user.5f71476  README.md  ResourceFile.qrc  chessboard.cpp  chessboard.h  exitshow.cpp  fivechess.cpp  fivechess.h  fivechess.ui  guize.cpp  guize.h  guize.ui  main.cpp  showus.cpp  showus.h  showus.ui  welcome.cpp  welcome.h  welcome.ui
sound/: s1.m4a
